--- a/ClientApp/client-app/src/index.html
+++ b/ClientApp/client-app/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Material Dashboard Lite</title>
+    <title>Quản lý dự án</title>
     <base href="/">
 
     <!-- Add to homescreen for Chrome on Android -->
